= BinData Changelog

== Version 1.x.x (2013-05-17)

* Updated to Ruby 2.0

== Version 1.4.5 (2012-07-24)

* Added the :pad_front option for padding to occur at the front of a String.
  (suggested by Eduardo Mourão).

== Version 1.4.4 (2012-06-21)

* Fixed bug where user defined boolean primitive wouldn't set its
  value to false (reported by Frank Roland).
* Fixed infinite looping bug caused by nested Choices.
* Renamed String parameter :pad_char to :pad_byte.
* Updated manual.

== Version 1.4.3 (2011-10-01)

* Exceptions no longer ignored inside lambdas when reading until eof 
  in an array (thanks John Labovitz).
* Fixed interaction bug between choices and records (reported by
  Refrigerator Johnny).

== Version 1.4.2 (2011-08-06)

* \=~ now works for strings.

== Version 1.4.1 (2011-06-20)

* Added :default option for Choices.
* Added count_bytes_remaining keyword.
* Increased speed of lazy evaluation.

== Version 1.4.0 (2011-06-14)

* Record#snapshot now returns fields in order.
* Removed the need to call #register_self in subclasses.
* Wrapper is now deprecated.  Use subclassing instead.
* Updated license to mimic changes to the Ruby License.
* Refactoring to reduce memory usage.

== Version 1.3.1 (2011-01-25)

* Fixed file permissions problem.

== Version 1.3.0 (2011-01-25)

* BinData objects can now assign values when instantiating.
* Improved support for bit-based alignment.
* Updated reference manual.
* Added examples for declaring recursive structures.
* Objects deriving from BinData::Base should no longer override #initialize.
* Added BinData::Base(#new, #initialize_instance) to speed up
  instantiation of multiple objects.
* Updated specs to rspec-1.3.0
* BinData::Struct.hide now expects symbols instead of strings.

== Version 1.2.2 (2010-12-14)

* Added Base.bindata_name method.
* Removed Base#done_read to reduce memory usage and cpu usage.
* Derived classes should now use do_read et al, instead of _do_read.