@@ -1,8 +1,10 @@
 = BinData Changelog
 
-== Version 1.x.x (2013-05-17)
+== Version 1.x.x (2013-05-21)
 
 * Updated to Ruby 2.0
+* Arrays now accept BinData object factories for :type (feature request by
+  Matt Dainty).
 
 == Version 1.4.5 (2012-07-24)
 
